--- a/roles/reproxy/files/web/styles.css
+++ b/roles/reproxy/files/web/styles.css
@@ -112,3 +112,28 @@ body {
 .high-load {
     color: red;
 }
+
+.error-message {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.error-message h2 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+}
+
+.error-message p {
+    font-size: 1.2rem;
+    color: #666;
+}
+
+.home-button {
+    display: inline-block;
+    text-decoration: none;
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
