🏞 Add Homeland page and update styles
- Created a new `homeland.html` page featuring an ASCII art representation.
- Added a link to the Homeland page in the main `index.html`.
- Updated `styles.css` to include styles for the Homeland page, such as centered button container and custom styling for the ASCII art block.

--- a/roles/reproxy/files/web/styles.css
+++ b/roles/reproxy/files/web/styles.css
@@ -137,6 +137,12 @@ body {
     color: #666;
 }
 
+.centered-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .home-button {
     display: inline-block;
     text-decoration: none;
@@ -154,4 +160,15 @@ body {
 
 .overfoot {
     padding: 0;
+}
+
+.homeland {
+    /*margin, padding and border-radius should be the same*/
+    text-align: center;
+    white-space: pre-line;
+    margin: -10px auto 20px;
+    width: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #ecf0f1;
 }
