🔧 Update cronn configuration and backup script
- 🌐 Add DNS settings to cronn container
- 🔄 Modify backup script to use 'servers' group instead of 'all'

--- a/roles/cronn/templates/backup-data.sh.j2
+++ b/roles/cronn/templates/backup-data.sh.j2
@@ -3,7 +3,7 @@
 exec &> >( ts "[%Y.%m.%d %H:%M:%S]")
 
 HOSTS=(
-{% for host in vars['groups']['all'] %}
+{% for host in vars["groups"]["servers"] %}
     {{ host }}
 {% endfor %}
 )
