🔧 Enhance logging in cronn scripts

--- a/roles/cronn/templates/backup-data.sh.j2
+++ b/roles/cronn/templates/backup-data.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-exec &> >( ts "[%Y.%m.%d %H:%M:%S]")
+exec &> >( ts "[%Y.%m.%d %H:%M:%S|$(basename "$0" | awk -F. '{print $1}')]")
 
 HOSTS=(
 {% for host in vars["groups"]["servers"] %}
