--- a/roles/cronn/templates/duck.sh.j2
+++ b/roles/cronn/templates/duck.sh.j2
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-exec &> >( ts "[%Y.%m.%d %H:%M:%S]")
+exec &> >( ts "[%Y.%m.%d %H:%M:%S|$(basename "$0" | awk -F. '{print $1}')]")
 
 echo "==============================================="
 echo "Updating DDNS for \"{{ duck_dns_domain }}.duckdns.org\" domain"
