--- a/roles/reproxy/files/web/styles.css
+++ b/roles/reproxy/files/web/styles.css
@@ -17,9 +17,14 @@ header {
 
 nav ul {
   list-style-type: none;
+  display: flex;
   margin: 0;
   padding: 0;
   text-align: center;
+  flex-wrap: wrap;
+  gap: 30px 0px;
+  flex-direction: row;
+  justify-content: center;
 }
 
 nav ul li {
@@ -45,6 +50,7 @@ main {
   padding: 20px;
   display: flex;
   flex-direction: column;
+  gap: 20px;
 }
 
 main:has(.overhead) {
@@ -70,6 +76,9 @@ body {
 .server-stats-container {
   display: flex;
   margin: 0 auto;
+  flex-wrap: wrap;
+  gap: 30px 10px;
+  justify-content: center;
 }
 
 .frame {
