--- a/roles/reproxy/files/web/styles.css
+++ b/roles/reproxy/files/web/styles.css
@@ -28,20 +28,21 @@ nav ul {
 }
 
 nav ul li {
-  display: inline;
-  margin: 0 10px;
+  display: flex;
+  margin: -10px 10px;
+  border-radius: 5px;
+  color: #333;
+  background-color: #ecf0f1;
+  transition: background-color 0.3s ease;
 }
 
 nav ul li a {
   text-decoration: none;
   color: #333;
-  background-color: #ecf0f1;
   padding: 10px 20px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
 }
 
-nav ul li a:hover {
+nav ul li:hover {
   background-color: #bdc3c7;
 }
 
@@ -181,4 +182,11 @@ body {
   border-radius: 10px;
   background-color: #ecf0f1;
   font-size: 2vw;
+}
+
+@media (max-width: 428px) {
+  .server-stats,
+  main {
+    padding: 5px;
+  }
 }
