--- a/roles/reproxy/files/web/styles.css
+++ b/roles/reproxy/files/web/styles.css
@@ -28,22 +28,7 @@ nav ul {
 }
 
 nav ul li {
-  display: flex;
   margin: -10px 10px;
-  border-radius: 5px;
-  color: #333;
-  background-color: #ecf0f1;
-  transition: background-color 0.3s ease;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #333;
-  padding: 10px 20px;
-}
-
-nav ul li:hover {
-  background-color: #bdc3c7;
 }
 
 main {
@@ -74,6 +59,34 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.button {
+  display: flex;
+  background-color: #3498db;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  box-shadow:
+    0 0 0 2px #3498db,
+    0 0 0 4px #ecf0f1;
+}
+
+.button a {
+  text-decoration: none;
+  color: #fff;
+  padding: 10px 20px;
+}
+
+.button-nav {
+  background-color: #ecf0f1;
+}
+
+.button-nav a {
+  color: #333;
+}
+
+.button-nav:hover {
+  background-color: #bdc3c7;
+}
+
 .server-stats-container {
   display: flex;
   margin: 0 auto;
@@ -82,11 +95,6 @@ body {
   justify-content: center;
 }
 
-.frame {
-  box-shadow:
-    0 0 0 2px #3498db,
-    0 0 0 4px #ecf0f1;
-}
 
 .server-stats {
   /*margin, padding and border-radius should be the same*/
@@ -98,6 +106,9 @@ body {
   border-radius: 10px;
   z-index: 10;
   background-color: #ecf0f1;
+  box-shadow:
+      0 0 0 2px #3498db,
+      0 0 0 4px #ecf0f1;
 }
 
 .server-stats h1 {
@@ -153,16 +164,6 @@ body {
   justify-content: center;
 }
 
-.home-button {
-  display: inline-block;
-  text-decoration: none;
-  background-color: #3498db;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
 .overhead {
   list-style-type: none;
   padding: 0;
@@ -182,6 +183,9 @@ body {
   border-radius: 10px;
   background-color: #ecf0f1;
   font-size: 2vw;
+  box-shadow:
+      0 0 0 2px #3498db,
+      0 0 0 4px #ecf0f1;
 }
 
 @media (max-width: 428px) {
